attempt(12): fix mobile header spacing

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -51,7 +51,7 @@ a[href]
 
 .mobile-header-height
   letter-spacing: -2.25px
-  margin-bottom: -3px
+  margin-bottom: -4px
   margin-top: 16px
   font-kerning: none
   font-size: 33px
